Use version based profiles to compile groovy code in encryption clients